--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  url_launcher:
+
 
 dev_dependencies:
   flutter_test:
@@ -40,6 +42,12 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - recipes.json
+    - assets/1001.jpg
+    - assets/1002.jpg
+    - assets/1003.jpg
+    - assets/1004.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
